stop search options wrapping at 800x600
git-svn-id: http://code.creativecommons.org/svnroot/ccsearch/trunk@7659 aec4f576-4910-0410-beeb-ecb0427469e7

--- a/search.css
+++ b/search.css
@@ -111,13 +111,13 @@ iframe {
 
 #left {
 	float: left;
-	margin-left: 1em;
+	margin-left: 0.5em;
 	line-height: 60px;
 }
 #right {
 	float: left;
 	font-size: 0.8em;
-	margin-left: 2ex;
+	margin-left: 5px;
 	background-color: #c8d7a0;
 	border: 1px solid #729032;
 	padding: 3px 0 3px 5px;
